@@ -1,0 +1,1 @@
+`C++` is hard. `C++` is fast.
